--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Web App</title>
+    <title>TITLE</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
     <div class="flex justify-center items-center h-screen">
         <div class="text-center">
-            <h1 class="text-2xl font-bold text-green-600">Hello, Mobile Web App!</h1>
-            <p class="text-gray-500">This is a basic setup.</p>
+            <h1 class="text-2xl font-bold text-green-600">TEXT</h1>
+            <p class="text-gray-500">TEXT</p>
         </div>
     </div>
 </body>
