Created initial login page (needs some edits)

--- a/frontend/template.html
+++ b/frontend/template.html
@@ -9,7 +9,7 @@
   <nav class="bg-green-900">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
-            <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> Bank Name</h1>
+            <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
               <div class="ml-6">
                   <a href="#" class="rounded bg-black px-3 py-2 text-white" aria-current="page">Home</a>
                   <a href="#" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
