--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,7 +11,7 @@
         <div class="relative flex h-16 items-center justify-between">
             <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
               <div class="ml-6">
-                  <a href="#" class="rounded bg-black px-3 py-2 text-white" aria-current="page">Sign In</a>
+                  <a href="login.html" class="rounded bg-black px-3 py-2 text-white" aria-current="page">Sign In</a>
               </div>
             </div>
           </div>
@@ -21,7 +21,7 @@
       <div class = "mx-5">
         <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign In</h1>7
         <div class="flex justify-center">
-          <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" src="bank.jpg">
+          <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
         </div>
         <div class="flex justify-center items-center">
           <input type="email" name="email" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
