--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -11,7 +11,7 @@
         <div class="relative flex h-16 items-center justify-between">
             <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
               <div class="ml-6">
-                  <a href="#" class="rounded px-3 py-2 text-white" aria-current="page">Sign In</a>
+                  <a href="login.html" class="rounded px-3 py-2 text-white" aria-current="page">Sign In</a>
               </div>
             </div>
           </div>
@@ -19,15 +19,20 @@
       </nav>
       <div class = "container my-5 mx-auto">
         <div class = "mx-5">
-          <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign In</h1>7
+          <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign up now!</h1>
           <div class="flex justify-center">
-            <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" src="bank.jpg">
+            <img class="border-4 border-green-800 mb-5 mt-6 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
           </div>
           <div class="flex justify-center items-center">
-            <input type="email" name="email" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
+            <h2 class="px-3 text-white font-bold">Username: </h2>
+            <input type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
           </div>
           <div class="flex justify-center items-center">
-            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded">Sign up!</button>
+            <h2 class="px-2 text-white font-bold">Balance (£):</h2>
+            <input type="number" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="0.00"/>
+          </div>
+          <div class="flex justify-center items-center">
+            <button class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded">Sign up!</button>
           </div>
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
