Created rewards page

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -11,7 +11,7 @@
         <div class="relative flex h-16 items-center justify-between">
             <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
               <div class="ml-6">
-                  <a href="login.html" class="rounded px-3 py-2 text-white" aria-current="page">Sign In</a>
+                  <a href="login.html" class="rounded px-3 py-2 text-white hover:bg-green-700 hover:text-white" aria-current="page">Sign In</a>
               </div>
             </div>
           </div>
