--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -7,18 +7,20 @@
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
   <nav class="bg-green-900">
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-            <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
+    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+          <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
+            <div class="ml-6">
               <div class="ml-6">
-                  <a href="#" class="rounded bg-black px-3 py-2 text-white mx-2" aria-current="page">Home</a>
-                  <a href="#" class="rounded bg-black px-3 py-2 text-white mx-2" aria-current="page">Pay</a>
-                  <a href="#" class="rounded bg-black px-3 py-2 text-white mx-2" aria-current="page">Sign Out</a>
+                  <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
+                  <a href="payment.html" class="rounded px-3 py-2 bg-black hover:bg-green-700 text-white">Pay</a>
+                  <a href="login.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
               </div>
             </div>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <div class = "container my-5 mx-auto flex-grow flex items-center justify-center py-10">
         <div class="w-full max-w-lg bg-gray-800 p-8 rounded-lg shadow-md">
         <h1 class="text-3xl font-bold text-white mt-5 text-center">Make Payment...</h1>
