Added some ID types to pages

--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -34,11 +34,11 @@
                 <h2 class="bg-gray-700 text-xl font-bold text-white px-5 rounded-l-lg py-4">Company's Waste Management: </h2>
                 <h2 class="bg-gray-600 text-xl font-bold text-white px-5 rounded-l-lg py-4">Company's Sustainability Practices: </h2>
                 <h2 class="bg-gray-700 text-xl font-bold text-white px-5 rounded-l-lg py-4 pb-3">Environmental Impact Score: </h2>
-                    <h2 class="row-start-1 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.1</h2>
-                    <h2 class="row-start-2 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-600">0.2</h2>
-                    <h2 class="row-start-3 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.3</h2>
-                    <h2 class="row-start-4 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-600">0.4</h2>
-                    <h2 class="row-start-5 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.5</h2>
+                    <h2 id="transactionType" class="row-start-1 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.1</h2>
+                    <h2 id="carbEmissions" class="row-start-2 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-600">0.2</h2>
+                    <h2 id="wasteManagement" class="row-start-3 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.3</h2>
+                    <h2 id="sustainPractices" class="row-start-4 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-600">0.4</h2>
+                    <h2 id="eiScore" class="row-start-5 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.5</h2>
                 </div>
             </div>
             <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span class="text-red-400">RED.</span></h1>
