--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,7 +24,7 @@
           <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
         </div>
         <div class="flex justify-center items-center">
-          <input type="email" name="email" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
+          <input id="username" type="text" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
         </div>
         <div class="flex justify-center items-center">
           <button class="bg-green-700 text-white font-bold py-2 px-4 rounded">Log In</button>
