--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -25,11 +25,11 @@
           </div>
           <div class="flex justify-center items-center">
             <h2 class="px-3 text-white font-bold">Username: </h2>
-            <input type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
+            <input id="username" type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
           </div>
           <div class="flex justify-center items-center">
             <h2 class="px-2 text-white font-bold">Balance (£):</h2>
-            <input type="number" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="0.00"/>
+            <input id="balance" type="number" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="0.00"/>
           </div>
           <div class="flex justify-center items-center">
             <button class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded">Sign up!</button>
