--- a/frontend/rewards.html
+++ b/frontend/rewards.html
@@ -31,8 +31,10 @@
         <div class="mt-3 border-2 border-green-800 border-x-0 py-4">
             <h2 class="text-xl font-bold text-white text-center mb-4">You've earned some <span class="text-orange-500">rewards!</span></h1>
                 <div class="grid grid-flow-col gap-1 mb-4">
+                  <a href="home.html">
                     <h2 class="bg-green-900 text-xl font-bold text-white px-5 rounded-l-lg py-4">Company Name Here</h2>
                     <h2 class="row-start-1 text-xl text-white text-right px-5 py-4 rounded-r-lg bg-green-800 text-red-400">10% Off</h2>
+                    </a>
                 </div>
                 <div class="grid grid-flow-col gap-1 mb-4">
                     <h2 class="bg-green-900 text-xl font-bold text-white px-5 rounded-l-lg py-4">Company Name Here</h2>
