--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <script src="main.js"></script>
 </head>
 <body class="bg-gray-900">
   <nav class="bg-green-900">
@@ -23,11 +24,12 @@
         <div class="flex justify-center">
           <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
         </div>
+        <p id="errorTag" class="text-center text-red-400 mb-1"></p>
         <div class="flex justify-center items-center">
-          <input id="username" type="text" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
+          <input id="username" type="text" class="text-center flex mb-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
         </div>
         <div class="flex justify-center items-center">
-          <button class="bg-green-700 text-white font-bold py-2 px-4 rounded">Log In</button>
+          <button class="bg-green-700 text-white font-bold py-2 px-4 rounded" onclick="attemptLogin()">Log In</button>
         </div>
         <p class="text-white text-center mt-5">Not a user? <a class="text-blue-400 hover:underline" href="signup.html">Sign up here.</a></p>
       </div>
