--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="flex justify-center space-x-4">
-            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2">Cancel</button>
+            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2" onclick="cancelPayment()">Cancel</button>
             <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2">Pay Now</button>
   
           </div>
