got some front-end functionality finally working

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -32,7 +32,7 @@
             <input id="balance" type="number" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="0.00"/>
           </div>
           <div class="flex justify-center items-center">
-            <button class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded">Sign up!</button>
+            <button class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded" onclick="CreateNewAccount()">Sign up!</button>
           </div>
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
@@ -43,4 +43,11 @@
     </div>
   </footer>
 </body>
+
+<script>
+  async function CreateNewAccount() {
+
+  }
+</script>
+
 </html>
