--- a/frontend/home.html
+++ b/frontend/home.html
@@ -29,9 +29,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="float-left bg-gray-400 rounded-full p-1 border-2" width="20%" height ="20%" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
                 </div>
                 <div class="text-center py-2">
-                    <h2 class="text-white font-bold">Username</h2>
-                    <h2 class="text-white">Account Balance:</h2>
-                    <h2 class="text-white">Green Level: </h2>
+                    <h2 id="Username" class="text-white font-bold">Username</h2>
+                    <h2 id="Balance" class="text-white">Account Balance:</h2>
+                    <h2 id="Level" class="text-white">Green Level: </h2>
                 </div>
             </div>
         </div>
@@ -58,4 +58,24 @@
     </div>
   </footer>
 </body>
+
+<script>
+  async function fetchAccountData() {
+    try {
+      const response = await fetch('/api/companies/3'); // Updated this line
+        const companyData = await response.json();
+
+        document.getElementById('Username').textContent = companyData['Company Name'];
+        document.getElementById('Balance').textContent = companyData['Balance'];
+        document.getElementById('Level').textContent = companyData['XP'];
+    } catch (error) {
+        console.error('Error fetching company data:', error);
+      }
+
+  }
+
+  window.onload = fetchAccountData;
+
+</script>
+
 </html>
