--- a/frontend/home.html
+++ b/frontend/home.html
@@ -59,23 +59,6 @@
   </footer>
 </body>
 
-<script>
-  async function fetchAccountData() {
-    try {
-      const response = await fetch('/api/companies/3'); // Updated this line
-        const companyData = await response.json();
-
-        document.getElementById('Username').textContent = companyData['Company Name'];
-        document.getElementById('Balance').textContent = companyData['Balance'];
-        document.getElementById('Level').textContent = companyData['XP'];
-    } catch (error) {
-        console.error('Error fetching company data:', error);
-      }
-
-  }
-
-  window.onload = fetchAccountData;
-
-</script>
+<script src="fetchAccountData.js"></script>
 
 </html>
