--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,9 +27,10 @@
           <input id="username" type="text" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
         </div>
         <div class="flex justify-center items-center">
-          <button class="bg-green-700 text-white font-bold py-2 px-4 rounded">Log In</button>
+          <button id="loginButton" class="bg-green-700 text-white font-bold py-2 px-4 rounded">Log In</button>
         </div>
         <p class="text-white text-center mt-5">Not a user? <a class="text-blue-400 hover:underline" href="signup.html">Sign up here.</a></p>
+        <div id="errorMessage" class="text-red-500 text-center mt-5"></div>
       </div>
     </div>
   <footer class="bg-green-900">
@@ -37,5 +38,8 @@
       <h1 class="text-gray-400">© 2024</h1>
     </div>
   </footer>
+
+  <script src="loginUser.js"></script>
+
 </body>
 </html>
