--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -44,10 +44,6 @@
   </footer>
 </body>
 
-<script>
-  async function CreateNewAccount() {
-
-  }
-</script>
+<script src="createNewAccount.js"></script>
 
 </html>
