made start to payment scripting

--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -43,7 +43,7 @@
 
         <div class="flex justify-center space-x-4">
             <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2">Cancel</button>
-            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2">Pay Now</button>
+            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2" onclick="makePayment()">Pay Now</button>
   
           </div>
 
@@ -56,5 +56,6 @@
       <h1 class="text-gray-400">© 2024</h1>
     </div>
   </footer>
+  <script src="makePayment.js"></script>
 </body>
 </html>
