Added login and signup functionality

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,8 +24,13 @@
           <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
         </div>
         <div class="flex justify-center items-center">
-          <input id="username" type="text" class="text-center flex my-3 px-3 py-2 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
-        </div>
+          <h2 class="px-3 text-white font-bold">Username: </h2>
+            <input id="username" type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
+          </div>
+          <div class="flex justify-center items-center">
+            <h2 class="px-2 text-white font-bold">Account Number:</h2>
+            <input id="accountNumber" type="text" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Account Number"/>
+          </div>
         <div class="flex justify-center items-center">
           <button id="loginButton" class="bg-green-700 text-white font-bold py-2 px-4 rounded">Log In</button>
         </div>
