--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -43,7 +43,7 @@
 
         <div class="flex justify-center space-x-4">
             <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2">Cancel</button>
-            <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2" onclick="makePayment()">Pay Now</button>
+            <button type="button" class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2" id="payNowButton">Pay Now</button>
   
           </div>
 
