--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -56,6 +56,6 @@
       <h1 class="text-gray-400">© 2024</h1>
     </div>
   </footer>
-  <script src="makePayment.js"></script>
+  <script src="./makePayment.js" type="module"></script>
 </body>
 </html>
