--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <title>Admin - Discounts</title>
 </head>
-<body class="bg-gray-900">
+<body class="bg-gray-900 flex flex-col min-h-screen"> 
   <nav class="bg-green-900">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
@@ -18,12 +19,15 @@
           </div>
         </div>
       </nav>
-    <div class = "container my-5 mx-auto">
-      <div class = "mx-5">
-        <h1 class="text-3xl font-bold text-white text-center">Administration </h1>
+
+    <div class="container my-5 mx-auto flex-grow">
+      <div class="mx-5">
+        <h1 class="text-3xl font-bold text-white text-center border-2 border-green-800 border-x-0 border-t-0 pb-4">Administration </h1>
+        
+        <!-- Discount Creation Form -->
         <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
-            <h2 class="text-xl font-bold pt-4 text-white text-center">Create a Discount</h1>
-                <p id="errorTag" class="text-red-400 text-center mt-1"></p>
+            <h2 class="text-xl font-bold pt-4 text-white text-center">Create a Discount</h2>
+            <p id="errorTag" class="text-red-400 text-center mt-1"></p>
             <div class="grid grid-flow-col gap-1 mt-1">
                 <h2 class="text-l font-bold text-white px-5 mt-3">Company Name:</h2>      
                 <input id="company" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Company"/>
@@ -45,26 +49,26 @@
                 <input id="description" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Description"/>
             </div>
             <div class="flex justify-center items-center">
-                <button type="button" class="bg-green-700 text-white font-bold py-2 px-8 mt-4 rounded mx-2" onclick="createDiscount()">Create Discount</button>
+                <button type="button" id="createDiscountButton" class="bg-green-700 text-white font-bold py-2 px-8 mt-4 rounded mx-2">Create Discount</button>
             </div>
         </div>
 
-        <div class="border-2 border-x-0 border-t-0 my-4 pb-4 border-green-800">
-            <h1 class="text-xl font-bold text-white text-center mb-4">Discounts List</h1>
-            <div id="discountsList">
-                <div class="grid grid-flow-col mb-4">
-                    <h2 class="bg-green-700 text-xl font-bold text-white px-5 rounded-l-lg py-4">Company Name Here</h2>
-                    <h2 class="bg-green-700 row-start-1 text-xl text-white text-right px-5 py-4 rounded-r-lg text-red-400">10% Off</h2>
-                </div>
-            </div>
+        <!-- Discounts List Section -->
+        <div id="rewardsContainer" class="mt-5 border-2 border-green-800 border-x-0 py-4">
+            <h2 class="text-xl font-bold text-white text-center mb-4">Available <span class="text-orange-500">Discounts</span></h2>
+            <!-- Discounts will be dynamically populated here -->
         </div>
       </div>
     </div>
-  <footer class="bg-green-900">
+
+  <!-- Footer -->
+  <footer class="bg-green-900 mt-auto">
     <div class="mx-auto p-4 text-center items-center justify-between">
-      <h1 class="text-gray-400">© 2024</h1>
+      <h1 class="text-gray-400">© 2024 EcoCents</h1>
     </div>
   </footer>
-  <script src = "admin.js"></script>
+
+  <!-- Script to handle fetching and creating discounts -->
+  <script src="admin.js"></script>
 </body>
 </html>
