--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
-    <script src ="main.js"></script>
+    <script src="main.js"></script>
 </head>
 <body class="bg-gray-900">
   <nav class="bg-green-900">
@@ -18,8 +18,8 @@
           </div>
         </div>
       </nav>
-      <div class = "container my-5 mx-auto">
-        <div class = "mx-5">
+      <div class="container my-5 mx-auto">
+        <div class="mx-5">
           <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign up now!</h1>
           <div class="flex justify-center">
             <img class="border-4 border-green-800 mb-5 mt-6 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
@@ -37,7 +37,7 @@
             <input id="balance" type="number" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="0.00"/>
           </div>
           <div class="flex justify-center items-center">
-            <button class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded" onclick="CreateNewAccount()">Sign up!</button>
+            <button id="signupButton" class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded">Sign up!</button>
           </div>
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
