got the transaction page complete (minus progress bar)

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -43,6 +43,13 @@
                     <h2 class="row-start-1 text-xl text-white text-right px-5 rounded-r-lg">{Level}</h2>
                 </div>
             </div>
+            <div class="border-2 border-x-0 border-green-800 pb-5 border-t-0">
+              <h2 class="text-xl mt-3 font-bold text-center text-white mb-3 ">Your progress to the next green level:</h2>
+              <div class="w-full h-6 mt-2 rounded-full bg-green-900">
+                 <div class="h-6 bg-green-600 rounded-full" style="width: 30%"> 
+                 </div>
+              </div>
+           </div>
             <div class="flex justify-center space-x-4">
                 <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2 my-5">Back to Account Screen</button>
             </div>
