--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -22,7 +22,7 @@
       </div>
     </nav>
     <div class = "container my-5 mx-auto flex-grow flex items-center justify-center py-10">
-        <div class="w-full max-w-lg bg-gray-800 p-8 rounded-lg shadow-md">
+        <div id = "paymentElements" class="w-full max-w-lg bg-gray-800 p-8 rounded-lg shadow-md">
         <h1 class="text-3xl font-bold text-white mt-5 text-center">Make Payment...</h1>
         <div class="flex justify-center items-center my-5">
         <form class="space-y-5">
