--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -41,7 +41,7 @@
                 <h2 id="eiScore" class="row-start-5 text-xl text-white px-5 py-4 rounded-r-lg bg-gray-700">0.5</h2>
             </div>
         </div>
-        <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span class="text-red-400">RED.</span></h1>
+        <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span id="ragRating">RED.</span></h1>
         <h2 class="text-xl text-white text-center">Recommendations for you: </h2>
     </div>
   </div>
