--- a/frontend/home.html
+++ b/frontend/home.html
@@ -37,7 +37,10 @@
                     <div class="text-center py-2">
                         <h2 id="Username" class="text-white font-bold">Username</h2>
                         <h2 id="Balance" class="text-white">Account Balance:</h2>
-                        <h2 id="Level" class="text-white">XP Level:</h2>
+                        <h2 id="Level" class="text-white">Level:</h2>
+                        <h2 id="XP" class="text-white">XP Level:</h2>
+
+
                     </div>
                 </div>
             </div>
@@ -61,3 +64,58 @@
     <script src="fetchAccountData.js"></script>
 </body>
 </html>
+
+<script>
+
+function Levels() {
+    const power = 2.5;
+    const denominator = 0.3;
+    const levelBounds = [];
+  
+    for (let i = 0; i < 11; i++) {
+      let bounds = i / denominator;
+      bounds = Math.pow(bounds, power);
+      levelBounds[i] = Math.round(bounds);
+    }
+    return levelBounds;
+  }
+
+
+  function calculateUserLevel(userXP) {
+    const levelBounds = Levels();
+    let level = 0;
+    let NextLevel = 0;
+    let PreviousLevel = 0;
+    let progressPercentage = 0;
+  
+    for (let i = 0; i < levelBounds.length; i++) {
+      if (userXP >= levelBounds[i]) {
+        level = i + 1;
+        PreviousLevel = levelBounds[i];
+        if (i + 1 < levelBounds.length) {
+          NextLevel = levelBounds[i + 1];
+        } else {
+          NextLevel = levelBounds[i];
+        }
+      } else {
+        NextLevel = levelBounds[i];
+        break;
+      }
+    }
+  
+    if (level < levelBounds.length) {
+      let xpForNextLevel = NextLevel - PreviousLevel;
+      let currentLevelProgress = userXP - PreviousLevel;
+      progressPercentage = (currentLevelProgress / xpForNextLevel) * 100;
+    } else {
+      progressPercentage = 100;
+    }
+  
+    return {
+      level: level,
+      progressPercentage: Math.round(progressPercentage * 100) / 100,
+      currentXP: userXP,
+      nextLevelXP: NextLevel
+    };
+  }
+</script>
