--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <title>EcoCents - Payment</title>
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
   <nav class="bg-green-900">
