--- a/frontend/rewards.html
+++ b/frontend/rewards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
-    <title>Rewards</title>
+    <title>EcoCents - Rewards</title>
 </head>
 <body class="bg-gray-900 flex flex-col min-h-screen"> 
   <nav class="bg-green-900">
