Added Rewards onto the Navbar

--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -15,6 +15,7 @@
               <div class="ml-6">
                   <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                   <a href="payment.html" class="rounded px-3 py-2 bg-black hover:bg-green-700 text-white">Pay</a>
+                  <a href="rewards.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
                   <a href="login.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
               </div>
             </div>
