--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,9 +21,9 @@
       </nav>
     <div class = "container my-5 mx-auto">
       <div class = "mx-5">
-        <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign In</h1>7
+        <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign In</h1>
         <div class="flex justify-center">
-          <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
+          <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex h-52 w-52 lg:h-80 lg:w-80" alt="A ClipArt logo of a bank." src="bank.jpg">
         </div>
         <p id="errorTag" class="text-center text-red-400 mb-1"></p>
         <div class="flex justify-center items-center">
@@ -41,9 +41,9 @@
         <div id="errorMessage" class="text-red-500 text-center mt-5"></div>
       </div>
     </div>
-  <footer class="bg-green-900">
+  <footer class="bg-green-900 w-screen" style="position: fixed; bottom: 0;">
     <div class="mx-auto p-4 text-center">
-      <h1 class="text-gray-400">© 2024</h1>
+      <h1 class="text-gray-400">© EcoCents 2024</h1>
     </div>
   </footer>
 
