--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -21,11 +21,10 @@
       </nav>
       <div class="container my-5 mx-auto">
         <div class="mx-5">
-          <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign up now!</h1>
+          <h1 class="text-3xl font-bold text-white my-5 text-center">Sign up now!</h1>
           <div class="flex justify-center">
-            <img class="border-4 border-green-800 mb-5 mt-6 rounded-full justify-center flex" width="50%" height="50%" src="bank.jpg">
+            <img class="border-4 border-green-800 mt-1 mb-5 rounded-full justify-center flex h-52 w-52 lg:h-80 lg:w-80" alt="A ClipArt logo of a bank." src="bank.jpg">
           </div>
-          
           <div class="flex justify-center">
             <p id="errorTag" class="text-center text-red-400 mb-1"></p>
           </div>
@@ -43,11 +42,11 @@
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
       </div>
-  <footer class="bg-green-900">
-    <div class="mx-auto p-4 text-center">
-      <h1 class="text-gray-400">© 2024</h1>
-    </div>
-  </footer>
+      <footer class="bg-green-900 w-screen" style="position: fixed; bottom: 0;">
+        <div class="mx-auto p-4 text-center">
+          <h1 class="text-gray-400">© EcoCents 2024</h1>
+      </div>
+      </footer>
 </body>
 
 <script src="createNewAccount.js"></script>
