--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,9 +21,9 @@
       </nav>
     <div class = "container my-5 mx-auto">
       <div class = "mx-5">
-        <h1 class="text-3xl font-bold text-white mt-5 text-center">Sign In</h1>
+        <h1 class="text-3xl font-bold text-white my-5 text-center">Sign In</h1>
         <div class="flex justify-center">
-          <img class="border-4 border-green-800 mb-5 rounded-full justify-center flex h-52 w-52 lg:h-80 lg:w-80" alt="A ClipArt logo of a bank." src="bank.jpg">
+          <img class="border-4 border-green-800 mt-1 mb-5 rounded-full justify-center flex h-52 w-52 lg:h-80 lg:w-80" alt="A ClipArt logo of a bank." src="bank.jpg">
         </div>
         <p id="errorTag" class="text-center text-red-400 mb-1"></p>
         <div class="flex justify-center items-center">
