--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -45,6 +45,9 @@
         <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span id="ragRating">RED.</span></h1>
         <h2 class="text-xl text-white text-center">Recommendations for you: </h2>
     </div>
+    <div id="alternatives">
+      
+    </div>
   </div>
   <footer class="bg-green-900">
     <div class="mx-auto p-4 text-center">
