--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span id="ragRating">RED.</span></h1>
-        <h2 class="text-xl text-white text-center">Recommendations for you: </h2>
+        <h2 class="text-xl mb-4 text-white text-center">Recommendations for you: </h2>
     </div>
     <div id="alternatives">
       
