--- a/frontend/home.html
+++ b/frontend/home.html
@@ -31,7 +31,7 @@
             <div class="flex border-2 py-5 border-x-0 border-green-800">
                 <div class="bg-gray-700 border-2 rounded-lg p-2 px-5 w-screen">
                     <div class="rounded-md">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="float-left bg-gray-400 rounded-full p-1 border-2" width="20%" height="20%" viewBox="0 0 448 512">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="float-left bg-gray-400 rounded-full p-1 border-2 h-28 w-28" viewBox="0 0 448 512">
                             <path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/>
                         </svg>
                     </div>
