--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -21,8 +21,8 @@
       </nav>
 
     <div class="container my-5 mx-auto flex-grow">
-      <div class="mx-5">
-        <h1 class="text-3xl font-bold text-white text-center border-2 border-green-800 border-x-0 border-t-0 pb-4">Administration </h1>
+      <div class="mx-5 lg:mx-60">
+        <h1 class="text-3xl font-bold text-white text-center">Administration </h1>
         
         <!-- Discount Creation Form -->
         <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Discounts List Section -->
-        <div id="rewardsContainer" class="mt-5 border-2 border-green-800 border-x-0 py-4">
+        <div id="rewardsContainer" class="mt-5 py-4">
             <h2 class="text-xl font-bold text-white text-center mb-4">Available <span class="text-orange-500">Discounts</span></h2>
             <!-- Discounts will be dynamically populated here -->
         </div>
