--- a/frontend/home.html
+++ b/frontend/home.html
@@ -24,7 +24,7 @@
 
     <!-- Main Container -->
     <div class="container my-5 mx-auto flex-grow"> <!-- Added flex-grow to take up the remaining space -->
-        <div class="mx-5">
+        <div class="mx-5 lg:mx-60">
             <h1 class="text-3xl font-bold text-white mt-5 text-center mb-4">Account</h1>
             
             <!-- Account Info Section -->
