--- a/frontend/rewards.html
+++ b/frontend/rewards.html
@@ -23,10 +23,10 @@
       </nav>
 
     <div class="container my-5 mx-auto flex-grow">
-      <div class="mx-5">
+      <div class="mx-5 lg:mx-60">
         <h1 class="text-3xl font-bold text-white text-center mt-5 border-2 border-green-800 border-x-0 border-t-0 pb-4">Rewards</h1>
-        <div class="mt-5 bg-gray-700 py-4 rounded-lg border-2">
-            <p class="text-2xl text-white text-center"><span id="username" class="text-orange-500 font-bold"></span>, you are level <span id="greenLevel" class="font-bold text-orange-500"></span> and have earned a total of <span id="xp" class="font-bold text-orange-500"></span> XP.</p>
+        <div class="my-5 bg-gray-700 py-4 rounded-lg border-2">
+            <p class="text-2xl text-white text-center mx-2"><span id="username" class="text-orange-500 font-bold"></span>, you are level <span id="greenLevel" class="font-bold text-orange-500"></span> and have earned a total of <span id="xp" class="font-bold text-orange-500"></span> XP.</p>
         </div>
         <div id="noRewards" class="text-2xl mt-3 font-bold text-white text-center border-2 border-green-800 border-x-0 border-b-0 pt-4"></div>
         
