cleaned up desktop view of analysis

--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -24,7 +24,7 @@
         </div>
       </nav>
     <div class="container my-5 mx-auto">
-      <div class="mx-5">
+      <div class="mx-5 lg:mx-60">
         <div class="border-2 border-t-0 border-x-0 border-green-900">
             <h1 class="text-3xl font-bold text-white mt-5 text-center">Your transaction with... </h1>
             <h2 id="companyName" class="text-green-200 text-xl mb-4 font-bold text-center">{Company Name Here}</h2> <!-- Updated this line -->
@@ -45,10 +45,11 @@
         </div>
         <h1 class="text-2xl font-bold text-white mt-5 text-center">Your final RAG Rating is <span id="ragRating">RED.</span></h1>
         <h2 class="text-xl mb-4 text-white text-center">Recommendations for you: </h2>
-    </div>
-    <div id="alternatives">
+        <div class = "mx-5 border-2 border-t-0 border-x-0 border-green-800" id="alternatives">
       
+        </div>
     </div>
+
   </div>
   <footer class="bg-green-900">
     <div class="mx-auto p-4 text-center">
