Fixed Navbar on mobile

--- a/public/rewards.html
+++ b/public/rewards.html
@@ -11,8 +11,8 @@
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
             <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
-              <div class="ml-6">
-                  <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Home</a>
+              <div class="ml-6 flex flex-nowrap">
+                  <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                   <a href="payment.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
                   <a href="rewards.html" class="rounded px-3 py-2 bg-black hover:bg-green-700 text-white">Rewards</a>
                   <a href="login.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
