--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
-                <div class="ml-6">
+                <div class="ml-6 flex flex-nowrap">
                     <a href="home.html" class="rounded bg-black text-white px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                     <a href="payment.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
                     <a href="rewards.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
