--- a/public/payment.html
+++ b/public/payment.html
@@ -12,7 +12,7 @@
       <div class="relative flex h-16 items-center justify-between">
           <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
             <div class="ml-6">
-              <div class="ml-6">
+              <div class="ml-6 flex flex-nowrap">
                   <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                   <a href="payment.html" class="rounded px-3 py-2 bg-black hover:bg-green-700 text-white">Pay</a>
                   <a href="rewards.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
