Account Number functionality added...finally!

--- a/public/payment.html
+++ b/public/payment.html
@@ -34,6 +34,11 @@
           </div>
 
           <div class="flex items-center space-x-4 py-2">
+            <label for="payee-account-number" class="felx text-md font-medium text-white w-1/3 text-right">Payee Account Number:</label>
+            <input id="payee-account-number" type="text" name="payee-account-number" class="w-2/3 px-3 py-2 bg-white border border-gray-300 shadow-sm rounded-lg" />
+      </div>
+
+          <div class="flex items-center space-x-4 py-2">
             <label for="payment-amount" class="block text-md font-medium text-white w-1/3 text-right">Payment Amount:</label>
             <input id="payment-amount" type="text" name="payment-amount" class="w-2/3 px-3 py-2 bg-white border border-gray-300 shadow-sm rounded-lg" />
         </div>
