--- a/public/login.html
+++ b/public/login.html
@@ -41,7 +41,7 @@
         <div id="errorMessage" class="text-red-500 text-center mt-5"></div>
       </div>
     </div>
-  <footer class="bg-green-900 w-screen" style="position: fixed; bottom: 0;">
+  <footer class="bg-green-900 w-screen">
     <div class="mx-auto p-4 text-center">
       <h1 class="text-gray-400">© EcoCents 2024</h1>
     </div>
