--- a/public/signup.html
+++ b/public/signup.html
@@ -42,7 +42,7 @@
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
       </div>
-      <footer class="bg-green-900 w-screen" style="position: fixed; bottom: 0;">
+      <footer class="bg-green-900 w-screen">
         <div class="mx-auto p-4 text-center">
           <h1 class="text-gray-400">© EcoCents 2024</h1>
       </div>
