Fixed admin page displaying based on account logged in as

--- a/public/analysis.html
+++ b/public/analysis.html
@@ -58,6 +58,7 @@
   </footer>
 
   <script src="companyAnalysis.js"></script>
-
+  <!-- Script to handle checking admin privlidges -->
+  <script src="checkAdminPrivileges.js"></script>
 </body>
 </html>
