--- a/public/home.html
+++ b/public/home.html
@@ -65,6 +65,8 @@
 
     <!-- Script to fetch and display account and transaction data -->
     <script src="fetchAccountData.js"></script>
+    <!-- Script to handle checking admin privlidges -->
+    <script src="checkAdminPrivileges.js"></script>
 </body>
 </html>
 
