--- a/public/payment.html
+++ b/public/payment.html
@@ -59,5 +59,7 @@
     </div>
   </footer>
   <script src="./makePayment.js" type="module"></script>
+  <!-- Script to handle checking admin privlidges -->
+  <script src="checkAdminPrivileges.js"></script>
 </body>
 </html>
