--- a/public/admin.html
+++ b/public/admin.html
@@ -14,7 +14,8 @@
               <div class="ml-6 flex flex-nowrap">
                   <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                   <a href="payment.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
-                  <a href="rewards.html" class="rounded px-3 py-2 bg-black hover:bg-green-700 text-white">Rewards</a>
+                  <a href="rewards.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
+                  <a href="admin.html" class="rounded px-3 py-2 bg-black text-white hover:bg-green-700">Admin</a>
                   <a href="login.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
               </div>
             </div>
@@ -24,7 +25,7 @@
 
     <div class="container my-5 mx-auto flex-grow">
       <div class="mx-5 lg:mx-60">
-        <h1 class="text-3xl font-bold text-white text-center">Administration </h1>
+        <h1 class="text-3xl font-bold text-white text-center">Administration</h1>
         
         <!-- Discount Creation Form -->
         <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
@@ -68,5 +69,7 @@
 
   <!-- Script to handle fetching and creating discounts -->
   <script src="admin.js"></script>
+  <!-- Script to handle checking admin privileges -->
+  <script src="checkAdminPrivileges.js"></script>
 </body>
 </html>
