--- a/public/rewards.html
+++ b/public/rewards.html
@@ -49,5 +49,7 @@
 
   <!-- Script to fetch and display rewards -->
   <script src="fetchRewards.js"></script>
+  <!-- Script to handle checking admin privlidges -->
+  <script src="checkAdminPrivileges.js"></script>
   </body>
 </html>
