--- a/public/admin.html
+++ b/public/admin.html
@@ -68,8 +68,8 @@
   </footer>
 
   <!-- Script to handle fetching and creating discounts -->
-  <script src="admin.js"></script>
+  <script src="scripts/admin.js"></script>
   <!-- Script to handle checking admin privileges -->
-  <script src="checkAdminPrivileges.js"></script>
+  <script src="scripts/checkAdminPrivileges.js"></script>
 </body>
 </html>
