--- a/public/analysis.html
+++ b/public/analysis.html
@@ -57,8 +57,8 @@
     <script src="main.js"></script>
   </footer>
 
-  <script src="companyAnalysis.js"></script>
+  <script src="scripts/companyAnalysis.js"></script>
   <!-- Script to handle checking admin privlidges -->
-  <script src="checkAdminPrivileges.js"></script>
+  <script src="scripts/checkAdminPrivileges.js"></script>
 </body>
 </html>
