--- a/public/home.html
+++ b/public/home.html
@@ -64,9 +64,9 @@
     </footer>
 
     <!-- Script to fetch and display account and transaction data -->
-    <script src="fetchAccountData.js"></script>
+    <script src="scripts/fetchAccountData.js"></script>
     <!-- Script to handle checking admin privlidges -->
-    <script src="checkAdminPrivileges.js"></script>
+    <script src="scripts/checkAdminPrivileges.js"></script>
 </body>
 </html>
 
