--- a/public/payment.html
+++ b/public/payment.html
@@ -63,8 +63,8 @@
       <h1 class="text-gray-400">© 2024</h1>
     </div>
   </footer>
-  <script src="./makePayment.js" type="module"></script>
+  <script src="scripts/makePayment.js" type="module"></script>
   <!-- Script to handle checking admin privlidges -->
-  <script src="checkAdminPrivileges.js"></script>
+  <script src="scripts/checkAdminPrivileges.js"></script>
 </body>
 </html>
