--- a/public/login.html
+++ b/public/login.html
@@ -47,7 +47,7 @@
     </div>
   </footer>
 
-  <script src="./loginUser.js"></script>
+  <script src="scripts/loginUser.js"></script>
 
 </body>
 </html>
