--- a/public/rewards.html
+++ b/public/rewards.html
@@ -48,8 +48,8 @@
   </footer>
 
   <!-- Script to fetch and display rewards -->
-  <script src="fetchRewards.js"></script>
+  <script src="scripts/fetchRewards.js"></script>
   <!-- Script to handle checking admin privlidges -->
-  <script src="checkAdminPrivileges.js"></script>
+  <script src="scripts/checkAdminPrivileges.js"></script>
   </body>
 </html>
