--- a/public/signup.html
+++ b/public/signup.html
@@ -49,6 +49,6 @@
       </footer>
 </body>
 
-<script src="createNewAccount.js"></script>
+<script src="scripts/createNewAccount.js"></script>
 
 </html>
