add acount number to account screen

--- a/public/home.html
+++ b/public/home.html
@@ -36,7 +36,8 @@
                         </svg>
                     </div>
                     <div class="text-center py-2">
-                        <h2 id="Username" class="text-white font-bold">Username</h2>
+                        <h2 id="Username" class="text-white font-bold">Username:</h2>
+                        <h2 id="AccountNumber" class="text-white font-bold">Account Number:</h2>
                         <h2 id="Balance" class="text-white">Account Balance:</h2>
                         <h2 id="Level" class="text-white">Level:</h2>
                         <h2 id="XP" class="text-white">XP Level:</h2>
