--- a/public/signup.html
+++ b/public/signup.html
@@ -42,13 +42,21 @@
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
       </div>
-      <footer class="bg-green-900 w-screen">
-        <div class="mx-auto p-4 text-center">
-          <h1 class="text-gray-400">© EcoCents 2024</h1>
-      </div>
+
+      <footer class="bg-green-900 mt-auto">
+        <div class="mx-auto p-4 text-center items-center justify-between">
+            <h1 class="text-gray-400">© 2024 EcoCents</h1>
+            <!-- Light Mode Toggle Button Moved to Footer -->
+            <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
+            Toggle Light Mode
+            </button>
+        </div>
       </footer>
+
 </body>
 
 <script src="scripts/createNewAccount.js"></script>
+<!-- Script to handle checking dark mode, light mode button -->
+<script src="scripts/darkLightButton.js"></script>
 
 </html>
