--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 <head>
+    <style>
+        /* Force input text color to be black */
+        input, textarea, select {
+          color: black !important;
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet"> 
