--- a/public/admin.html
+++ b/public/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-      /* Force input text color to be black */
+      /* Ensures black text */
       input, textarea, select {
         color: black !important;
       }
@@ -19,10 +19,9 @@
       <div class="relative flex items-center justify-between h-16">
         <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
 
-        <!-- Hamburger Menu Button (always visible) -->
+        <!-- Hamburger Menu -->
         <div class="flex items-center">
           <button id="menuToggle" class="text-white focus:outline-none">
-            <!-- Hamburger Icon -->
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
             </svg>
@@ -30,7 +29,7 @@
         </div>
       </div>
 
-      <!-- Mobile Menu (hidden by default, toggled by hamburger) -->
+      <!-- Expanded Hamburger -->
       <div id="mobileMenu" class="hidden">
         <a href="home.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
         <a href="payment.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
@@ -45,7 +44,7 @@
     <div class="mx-5 lg:mx-60">
       <h1 class="text-3xl font-bold text-white text-center">Administration</h1>
       
-      <!-- Discount Creation Form -->
+      <!-- Form for creating discounts -->
       <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
           <h2 class="text-xl font-bold pt-4 text-white text-center">Create a Discount</h2>
           <p id="errorTag" class="text-red-400 text-center mt-1"></p>
@@ -70,19 +69,17 @@
           </div>
       </div>
 
-      <!-- Discounts List Section -->
+      <!-- Discounts list -->
       <div id="rewardsContainer" class="mt-5 py-4">
           <h2 class="text-xl font-bold text-white text-center mb-4">Available <span class="text-orange-500">Discounts</span></h2>
-          <!-- Discounts will be dynamically populated here -->
       </div>
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="bg-green-900 mt-auto">
     <div class="mx-auto p-4 text-center items-center justify-between">
       <h1 class="text-gray-400">© 2024 EcoCents</h1>
-      <!-- Light Mode Toggle Button Moved to Footer -->
+      <!-- Light mode toggle -->
       <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
         Toggle Light Mode
       </button>
@@ -90,13 +87,13 @@
   </footer>
 
 
-  <!-- Script to handle fetching and creating discounts -->
+  <!-- Fetches and creates discounts -->
   <script src="scripts/admin.js"></script>
-  <!-- Script to handle checking admin privileges -->
+  <!-- Checks admin privileges -->
   <script src="scripts/checkAdminPrivileges.js"></script>
-  <!-- Script to handle checking dark mode, light mode button -->
+  <!-- Checks dark mode / light mode -->
   <script src="scripts/darkLightButton.js"></script>
-  <!-- Script to handle menu toggling -->
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const menuToggle = document.getElementById('menuToggle');
