--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        /* Force input text color to be black */
+        /* Ensures black text */
         input, textarea, select {
           color: black !important;
         }
@@ -13,16 +13,14 @@
     <title>EcoCents - Payment Successful</title>
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
-    <!-- Navigation Bar with Hamburger Menu -->
     <nav class="bg-green-900">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
 
-                <!-- Hamburger Menu Button (always visible) -->
+                <!-- Hamburger Menu -->
                 <div class="flex items-center">
                     <button id="menuToggle" class="text-white focus:outline-none">
-                        <!-- Hamburger Icon -->
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                         </svg>
@@ -30,7 +28,7 @@
                 </div>
             </div>
 
-            <!-- Mobile Menu (hidden by default, toggled by hamburger) -->
+            <!-- Expanded Hamburger -->
             <div id="mobileMenu" class="hidden">
                 <a href="home.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                 <a href="payment.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
@@ -40,13 +38,12 @@
         </div>
     </nav>
 
-    <!-- Main Container -->
     <div class="container my-5 mx-auto flex-grow flex items-center justify-center py-10">
         <div class="w-full max-w-lg bg-gray-800 p-8 rounded-lg shadow-md">
             <h1 class="text-3xl text-green-400 font-bold text-white mt-5 text-center">Payment Successful!</h1>
             <h2 class="text-xl font-bold text-white text-center py-2 pb-5">Your payment to: <span id="companyName" class="text-green-400">{Company Name Here}</span></h2>
             
-            <!-- Payment Info Section -->
+            <!-- Payment info section -->
             <div class="border-green-800 border-2 py-5 border-x-0">
                 <div class="grid grid-flow-col gap-1 mb-2">
                     <h2 class="text-xl font-bold text-white px-5 rounded-l-lg">You spent...</h2>
@@ -66,7 +63,7 @@
                 </div>
             </div>
 
-            <!-- Progress Section -->
+            <!-- Progress section -->
             <div class="border-2 border-x-0 border-green-800 pb-5 border-t-0">
                 <h2 class="text-xl mt-3 font-bold text-center text-white mb-3">Your progress to the next green level:</h2>
                 <div class="w-full h-6 mt-2 rounded-full bg-green-900">
@@ -74,25 +71,23 @@
                 </div>
             </div>
 
-            <!-- Back Button -->
+            <!-- Back button -->
             <div class="flex justify-center space-x-4">
                 <button class="bg-green-700 text-white font-bold py-2 px-4 rounded mx-2 my-5">Back to Account Screen</button>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-green-900 mt-auto">
         <div class="mx-auto p-4 text-center items-center justify-between">
             <h1 class="text-gray-400">© 2024 EcoCents</h1>
-            <!-- Light Mode Toggle Button Moved to Footer -->
+            <!-- Light mode toggle -->
             <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
             Toggle Light Mode
             </button>
         </div>
     </footer>
 
-    <!-- Script to handle menu toggling -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const menuToggle = document.getElementById('menuToggle');
@@ -104,7 +99,7 @@
         });
     </script>
 
-    <!-- Script to handle checking dark mode, light mode button -->
+    <!-- Checks dark mode / light mode -->
     <script src="scripts/darkLightButton.js"></script>
 </body>
 </html>
