--- a/public/payment.html
+++ b/public/payment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        /* Force input text color to be black */
+        /* Ensures black text */
         input, textarea, select {
           color: black !important;
         }
@@ -14,16 +14,14 @@
     <title>EcoCents - Payment</title>
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
-    <!-- Navigation Bar with Hamburger Menu -->
     <nav class="bg-green-900">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
 
-                <!-- Hamburger Menu Button (always visible) -->
+                <!-- Hamburger Menu -->
                 <div class="flex items-center">
                     <button id="menuToggle" class="text-white focus:outline-none">
-                        <!-- Hamburger Icon -->
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                         </svg>
@@ -31,7 +29,7 @@
                 </div>
             </div>
 
-            <!-- Mobile Menu (hidden by default, toggled by hamburger) -->
+            <!-- Expanded Hamburger -->
             <div id="mobileMenu" class="hidden">
                 <a href="home.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                 <a href="payment.html" class="block px-3 py-2 bg-black text-white hover:bg-green-700">Pay</a>
@@ -47,6 +45,8 @@
             <h1 class="text-3xl font-bold text-white mt-5 text-center">Make Payment...</h1>
             <div class="flex justify-center items-center my-5">
                 <form class="space-y-5">
+
+                    <!-- Main form for transactions -->
                     <div class="flex items-center space-x-4 py-2">
                         <label for="payee-name" class="flex text-md font-medium text-white w-1/3 text-right">Payee Name:</label>
                         <input id="payee-name" type="text" name="payee-name" class="w-2/3 px-3 py-2 bg-white border border-gray-300 shadow-sm rounded-lg" />
@@ -76,18 +76,16 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-green-900 mt-auto">
         <div class="mx-auto p-4 text-center items-center justify-between">
             <h1 class="text-gray-400">© 2024 EcoCents</h1>
-            <!-- Light Mode Toggle Button Moved to Footer -->
+            <!-- Light mode toggle -->
             <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
             Toggle Light Mode
             </button>
         </div>
     </footer>
 
-    <!-- Script to handle menu toggling -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const menuToggle = document.getElementById('menuToggle');
@@ -99,11 +97,11 @@
         });
     </script>
 
-    <!-- Script to handle payment logic -->
+    <!-- Handles payment logic -->
     <script src="scripts/makePayment.js" type="module"></script>
-    <!-- Script to handle checking admin privileges -->
+    <!-- Checks admin privileges -->
     <script src="scripts/checkAdminPrivileges.js"></script>
-    <!-- Script to handle checking dark mode, light mode button -->
+    <!-- Checks dark mode / light mode -->
     <script src="scripts/darkLightButton.js"></script>
 </body>
 </html>
