--- a/public/rewards.html
+++ b/public/rewards.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        /* Force input text color to be black */
+        /* Ensures black text */
         input, textarea, select {
           color: black !important;
         }
@@ -14,16 +14,14 @@
     <title>EcoCents - Rewards</title>
 </head>
 <body class="bg-gray-900 flex flex-col min-h-screen"> 
-    <!-- Navigation Bar with Hamburger Menu -->
     <nav class="bg-green-900">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
 
-                <!-- Hamburger Menu Button (always visible) -->
+                <!-- Hamburger Menu -->
                 <div class="flex items-center">
                     <button id="menuToggle" class="text-white focus:outline-none">
-                        <!-- Hamburger Icon -->
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                         </svg>
@@ -31,7 +29,7 @@
                 </div>
             </div>
 
-            <!-- Mobile Menu (hidden by default, toggled by hamburger) -->
+            <!-- Expanded Hamburger -->
             <div id="mobileMenu" class="hidden">
                 <a href="home.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
                 <a href="payment.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
@@ -55,23 +53,20 @@
             
             <div id="rewardsContainer" class="mt-3 py-4">
                 <h2 class="text-xl font-bold text-white text-center mb-4">You've earned some <span class="text-orange-500">rewards!</span></h2>
-                <!-- Rewards will be dynamically added here -->
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-green-900 mt-auto">
         <div class="mx-auto p-4 text-center items-center justify-between">
             <h1 class="text-gray-400">© 2024 EcoCents</h1>
-            <!-- Light Mode Toggle Button Moved to Footer -->
+            <!-- Light mode toggle -->
             <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
             Toggle Light Mode
             </button>
         </div>
     </footer>
 
-    <!-- Script to handle menu toggling -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const menuToggle = document.getElementById('menuToggle');
@@ -83,11 +78,11 @@
         });
     </script>
 
-    <!-- Script to fetch and display rewards -->
+    <!-- Fetches and displays rewards -->
     <script src="scripts/fetchRewards.js"></script>
-    <!-- Script to handle checking admin privileges -->
+    <!-- Checks admin privileges -->
     <script src="scripts/checkAdminPrivileges.js"></script>
-    <!-- Script to handle checking dark mode, light mode button -->
+    <!-- Checks dark mode / light mode -->
     <script src="scripts/darkLightButton.js"></script>
 </body>
 </html>
