--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-      /* Force input text color to be black */
+      /* Ensures black text */
       input, textarea, select {
         color: black !important;
       }
@@ -35,6 +35,8 @@
           <div class="flex justify-center">
             <p id="errorTag" class="text-center text-red-400 mb-1"></p>
           </div>
+
+          <!-- Input boxes for entering signup details -->
           <div class="flex justify-center items-center">
             <h2 class="px-3 text-white font-bold">Username: </h2>
             <input id="username" type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
@@ -46,6 +48,8 @@
           <div class="flex justify-center items-center">
             <button id="signupButton" class="bg-green-700 text-white font-bold mt-2 py-2 px-4 rounded">Sign up!</button>
           </div>
+
+          <!-- Redirects to login page -->
           <p class="text-white text-center mt-5">Already a user? <a class="text-blue-400 hover:underline" href="login.html">Sign in here.</a></p>
         </div>
       </div>
@@ -53,7 +57,7 @@
       <footer class="bg-green-900 mt-auto">
         <div class="mx-auto p-4 text-center items-center justify-between">
             <h1 class="text-gray-400">© 2024 EcoCents</h1>
-            <!-- Light Mode Toggle Button Moved to Footer -->
+            <!-- Light mode toggle -->
             <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
             Toggle Light Mode
             </button>
@@ -63,7 +67,7 @@
 </body>
 
 <script src="scripts/createNewAccount.js"></script>
-<!-- Script to handle checking dark mode, light mode button -->
+<!-- Checks dark mode / light mode -->
 <script src="scripts/darkLightButton.js"></script>
 
 </html>
