Fixed port issue, fixed websocket issue

--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -88,9 +88,9 @@
 
 
   <!-- Fetches and creates discounts -->
-  <script src="scripts/admin.js"></script>
+  <script type="module" src="scripts/admin.js"></script>
   <!-- Checks admin privileges -->
-  <script src="scripts/checkAdminPrivileges.js"></script>
+  <script type="module" src="scripts/checkAdminPrivileges.js"></script>
   <!-- Checks dark mode / light mode -->
   <script src="scripts/darkLightButton.js"></script>
 
