--- a/frontend/public/analysis.html
+++ b/frontend/public/analysis.html
@@ -90,9 +90,9 @@
   </script>
 
 
-  <script src="scripts/companyAnalysis.js"></script>
+  <script type="module" src="scripts/companyAnalysis.js"></script>
   <!-- Checks for admin privileges -->
-  <script src="scripts/checkAdminPrivileges.js"></script>
+  <script type="module" src="scripts/checkAdminPrivileges.js"></script>
   <!-- Checks dark mode / light mode -->
   <script src="scripts/darkLightButton.js"></script>
 </body>
