--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -93,11 +93,11 @@
     </script>
 
     <!-- Fetches and displays account and transaction data -->
-    <script src="scripts/fetchAccountData.js"></script>
+    <script type="module" src="scripts/fetchAccountData.js"></script>
     <!-- Checks admin privileges -->
-    <script src="scripts/checkAdminPrivileges.js"></script>
-    <script src="scripts/levelingForHome.js"></script>
+    <script type="module" src="scripts/checkAdminPrivileges.js"></script>
+    <script type="module" src="scripts/levelingForHome.js"></script>
     <!-- Checks dark mode / light mode button -->
-    <script src="scripts/darkLightButton.js"></script>
+    <script type="module" src="scripts/darkLightButton.js"></script>
 </body>
 </html>
