--- a/frontend/public/confirmation.html
+++ b/frontend/public/confirmation.html
@@ -100,6 +100,6 @@
     </script>
 
     <!-- Checks dark mode / light mode -->
-    <script src="scripts/darkLightButton.js"></script>
+    <script type="module" src="scripts/darkLightButton.js"></script>
 </body>
 </html>
