--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TITLE</title>
     <link href="styles.css" rel="stylesheet">
+    <script>
+        // Redirect to login.html instantly
+        window.location.href = "login.html";
+    </script>
 </head>
 <body class="bg-gray-100">
     <div class="flex justify-center items-center h-screen">
         <div class="text-center">
-            <h1 class="text-2xl font-bold text-green-600">TEXT</h1>
-            <p class="text-gray-500">TEXT</p>
+            <p class="text-gray-500">You will be redirected to the login page...</p>
         </div>
     </div>
 </body>
