--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -63,9 +63,10 @@
     </div>
   </footer>
 
-  <script src="scripts/loginUser.js"></script>
+  <script type="module" src="scripts/loginUser.js"></script>
+
   <!-- Checks dark mode / light mode -->
-  <script src="scripts/darkLightButton.js"></script>
+  <script type="module" src="scripts/darkLightButton.js"></script>
 
 </body>
 </html>
