makePayment and checkAdminPrivlidges import fixes

--- a/frontend/public/payment.html
+++ b/frontend/public/payment.html
@@ -98,10 +98,10 @@
     </script>
 
     <!-- Handles payment logic -->
-    <script src="scripts/makePayment.js" type="module"></script>
+    <script type="module" src="scripts/makePayment.js" type="module"></script>
     <!-- Checks admin privileges -->
-    <script src="scripts/checkAdminPrivileges.js"></script>
+    <script type="module" src="scripts/checkAdminPrivileges.js"></script>
     <!-- Checks dark mode / light mode -->
-    <script src="scripts/darkLightButton.js"></script>
+    <script type="module" src="scripts/darkLightButton.js"></script>
 </body>
 </html>
