--- a/frontend/public/rewards.html
+++ b/frontend/public/rewards.html
@@ -79,10 +79,10 @@
     </script>
 
     <!-- Fetches and displays rewards -->
-    <script src="scripts/fetchRewards.js"></script>
+    <script type="module" src="scripts/fetchRewards.js"></script>
     <!-- Checks admin privileges -->
-    <script src="scripts/checkAdminPrivileges.js"></script>
+    <script type="module" src="scripts/checkAdminPrivileges.js"></script>
     <!-- Checks dark mode / light mode -->
-    <script src="scripts/darkLightButton.js"></script>
+    <script type="module" src="scripts/darkLightButton.js"></script>
 </body>
 </html>
