--- a/frontend/public/signup.html
+++ b/frontend/public/signup.html
@@ -66,8 +66,8 @@
 
 </body>
 
-<script src="scripts/createNewAccount.js"></script>
+<script type="module" src="scripts/createNewAccount.js"></script>
 <!-- Checks dark mode / light mode -->
-<script src="scripts/darkLightButton.js"></script>
+<script type="module" src="scripts/darkLightButton.js"></script>
 
 </html>
